FE-976 - Fix details page grid, fix PageDescription spacing in Hibana

--- a/src/components/text/PageDescription.module.scss
+++ b/src/components/text/PageDescription.module.scss
@@ -1,3 +1,3 @@
 .PageDescription {
-  transform: translateY(-15px);
+  transform: translateY(-20px);
 }
